--- a/ManveetsBookStore/ManveetsBookStore.csproj
+++ b/ManveetsBookStore/ManveetsBookStore.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ManveetsBooks.DataAccess\ManveetsBooks.DataAccess.csproj" />
+    <ProjectReference Include="..\ManveetsBooks.Models\ManveetsBooks.Models.csproj" />
+    <ProjectReference Include="..\ManveetsBooks.Utility\ManveetsBooks.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
