--- a/ManveetsBookStore/appsettings.json
+++ b/ManveetsBookStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ManveetsBookStore-456ED489-F0C5-4E15-8DF5-EF1AAA33737F;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\ProjectsV13;Database=ManveetsBookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
