--- a/ManveetsBookStore/ManveetsBookStore.csproj
+++ b/ManveetsBookStore/ManveetsBookStore.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\ManveetsBooks.Utility\ManveetsBooks.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
+
 </Project>
